<resources>
    <string name="app_name">Ecard</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="text_of_login"><i><b>Create and Send Free eCard </b></i></string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_verification_code">Verification Code</string>
    <string name="login_checkbox"><i>keep me logged in</i></string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="title_activity_update_personal_details">UpdatePersonalDetails</string>
    <string name="title_activity_forget_password">ForgetPassword</string>
    <string name="title_activity_font_selection">FontSelection</string>
    <string name="title_activity_card_info_details_update">CardInfoDetailsUpdate</string>
    <string name="title_activity_card_info_manual_update">CardInfoManualUpdate</string>
    <string name="title_activity_select_card">SelectCard</string>

    <!--main menu -->
    <string name="search">Search</string>
    <string name="select_card">Select Card</string>
    <string name="create_card">Create Card</string>
    <string name="options">options</string>
    <string name="share">share</string>

    <!--drawable menu -->
    <string name="profile">Profile</string>
    <string name="all_contacts">All Contacts</string>
    <string name="all_cards">All Cards</string>
    <string name="title_activity_all_cards">AllCards</string>
    <string name="title_activity_selected_card">SelectedCard</string>
    <string name="title_activity_all_card_display">AllCardDisplay</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_all_contacts">Ecard</string>
    <string name="title_activity_email_compose">Ecard</string>

    <string name="et_from_email_address_hint"><font size="16">From</font></string>
    <string name="et_to_email_address_hint"><font size="16">To</font></string>
    <string name="et_cc_email_address_hint"><font size="16">Cc</font></string>
    <string name="et_bcc_email_address_hint"><font size="16">Bcc</font></string>
    <string name="title_activity_profile_picture">Ecard</string>
    <string name="title_activity_complete_profile">Ecard</string>
    <string name="title_activity_edit_profile">Ecard</string>
    <string name="title_activity_user_profile">Ecard</string>
    <string name="title_activity_complete_profile_indicator">Ecard</string>
    <string name="title_activity_linkedin">Ecard</string>
    <string name="title_activity_print_card">Ecard</string>
    <string name="title_activity_single_card_layout1">Ecard</string>
    <string name="title_activity_single_card_layout2">Ecard</string>
    <string name="title_activity_single_card_layout3">Ecard</string>
    <string name="title_activity_single_card_layout4">Ecard</string>
    <string name="title_activity_single_card_layout5">Ecard</string>
    <string name="title_activity_single_card_layout6">Ecard</string>
    <string name="title_activity_single_card_layout7">Ecard</string>
    <string name="title_activity_facebook">Ecard</string>
</resources>
