<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/action_bar_height"
    tools:context="com.academic.project.ecard.EmailCompose"
    tools:showIn="@layout/app_bar_email_compose">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@drawable/main_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="20dp"
            android:text="Email Compose"
            android:textColor="#FF6600"
            android:textSize="22dp" />
        <EditText
            android:id="@+id/et_from_email_address"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_from_email_address_hint"
            android:textColorHint="#FF6600"
            android:textColor="#FF6600"
            android:textSize="16dp"/>
        <EditText
            android:id="@+id/et_to_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/et_to_email_address_hint"
            android:textColorHint="#FF6600"
            android:textColor="#FF6600"
            android:textSize="16dp"/>
        <EditText
            android:id="@+id/et_cc_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/et_cc_email_address_hint"
            android:textColorHint="#FF6600"
            android:textColor="#FF6600"
            android:textSize="16dp"/>
        <EditText
            android:id="@+id/et_bcc_email_address_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/et_bcc_email_address_hint"
            android:textColorHint="#FF6600"
            android:textColor="#FF6600"
            android:textSize="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="I'd like to share this card with you"
            android:textColor="#FF6600"
            android:textSize="16dp" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:shrinkColumns="*">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name: "
                    android:textColor="#FF6600"
                    android:textSize="15dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="A.K.M. Nazmul Islam"
                    android:textColor="#FF6600"
                    android:textSize="15dp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Company: "
                    android:textColor="#FF6600"
                    android:textSize="15dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sampan IT"
                    android:textColor="#FF6600"
                    android:textSize="15dp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone: "
                    android:textColor="#FF6600"
                    android:textSize="15dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01912314466"
                    android:textColor="#FF6600"
                    android:textSize="15dp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email: "
                    android:textColor="#FF6600"
                    android:textSize="15dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="nazmulislamredoy@gmail.com"
                    android:textColor="#FF6600"
                    android:textSize="15dp" />
            </TableRow>
        </TableLayout>
        <TextView
            android:id="@+id/tv_card_link"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="25dp"
            android:text="Shared_card_2016_2_44_786"
            android:textColor="#FF6600"
            android:textSize="15dp"/>
        <Button
            android:id ="@+id/email_send_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="Send"
            android:textAllCaps="false"
            android:background="@drawable/common_bordered_orrange_button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:textColor="#fff" />
    </LinearLayout>
</LinearLayout>
